{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 281,
  "lineage": "1ed60bfb-35cc-fc2d-b789-e4aa0e53552f",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "dut1_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/publicIPAddresses/dut1_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.74.149.204",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "dut1_public_ip",
            "resource_group_name": "CSIT_pm",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "dut2_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/publicIPAddresses/dut2_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.74.150.100",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "dut2_public_ip",
            "resource_group_name": "CSIT_pm",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "tg_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/publicIPAddresses/tg_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.164.220.82",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "tg_public_ip",
            "resource_group_name": "CSIT_pm",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dut1_if1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut1_if1",
            "ip_configuration": [
              {
                "name": "dut1_if1",
                "primary": true,
                "private_ip_address": "192.168.10.11",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_b"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B0-E9-51",
            "name": "dut1_if1",
            "network_security_group_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkSecurityGroups/CSIT",
            "private_ip_address": "192.168.10.11",
            "private_ip_addresses": [
              "192.168.10.11"
            ],
            "resource_group_name": "CSIT_pm",
            "virtual_machine_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Compute/virtualMachines/dut1"
          },
          "dependencies": [
            "azurerm_network_security_group.CSIT",
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.b",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dut1_if2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut1_if2",
            "ip_configuration": [
              {
                "name": "dut1_if2",
                "primary": true,
                "private_ip_address": "200.0.0.101",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_c"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B0-EE-25",
            "name": "dut1_if2",
            "network_security_group_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkSecurityGroups/CSIT",
            "private_ip_address": "200.0.0.101",
            "private_ip_addresses": [
              "200.0.0.101"
            ],
            "resource_group_name": "CSIT_pm",
            "virtual_machine_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Compute/virtualMachines/dut1"
          },
          "dependencies": [
            "azurerm_network_security_group.CSIT",
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.c",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dut1_mng",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut1_mng",
            "ip_configuration": [
              {
                "name": "dut1_mng_ip",
                "primary": true,
                "private_ip_address": "172.16.0.11",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/publicIPAddresses/dut1_public_ip",
                "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_a"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B0-EE-51",
            "name": "dut1_mng",
            "network_security_group_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkSecurityGroups/CSIT",
            "private_ip_address": "172.16.0.11",
            "private_ip_addresses": [
              "172.16.0.11"
            ],
            "resource_group_name": "CSIT_pm",
            "virtual_machine_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Compute/virtualMachines/dut1"
          },
          "dependencies": [
            "azurerm_network_security_group.CSIT",
            "azurerm_public_ip.dut1_public_ip",
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.a",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dut2_if1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut2_if1",
            "ip_configuration": [
              {
                "name": "dut2_if1",
                "primary": true,
                "private_ip_address": "200.0.0.102",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_c"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B0-EC-48",
            "name": "dut2_if1",
            "network_security_group_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkSecurityGroups/CSIT",
            "private_ip_address": "200.0.0.102",
            "private_ip_addresses": [
              "200.0.0.102"
            ],
            "resource_group_name": "CSIT_pm",
            "virtual_machine_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Compute/virtualMachines/dut2"
          },
          "dependencies": [
            "azurerm_network_security_group.CSIT",
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.c",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dut2_if2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut2_if2",
            "ip_configuration": [
              {
                "name": "dut2_if2",
                "primary": true,
                "private_ip_address": "192.168.20.11",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_d"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B0-E4-47",
            "name": "dut2_if2",
            "network_security_group_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkSecurityGroups/CSIT",
            "private_ip_address": "192.168.20.11",
            "private_ip_addresses": [
              "192.168.20.11"
            ],
            "resource_group_name": "CSIT_pm",
            "virtual_machine_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Compute/virtualMachines/dut2"
          },
          "dependencies": [
            "azurerm_network_security_group.CSIT",
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.d",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dut2_mng",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut2_mng",
            "ip_configuration": [
              {
                "name": "dut2_mng_ip",
                "primary": true,
                "private_ip_address": "172.16.0.12",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/publicIPAddresses/dut2_public_ip",
                "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_a"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B0-E3-97",
            "name": "dut2_mng",
            "network_security_group_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkSecurityGroups/CSIT",
            "private_ip_address": "172.16.0.12",
            "private_ip_addresses": [
              "172.16.0.12"
            ],
            "resource_group_name": "CSIT_pm",
            "virtual_machine_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Compute/virtualMachines/dut2"
          },
          "dependencies": [
            "azurerm_network_security_group.CSIT",
            "azurerm_public_ip.dut2_public_ip",
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.a",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tg_if1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/tg_if1",
            "ip_configuration": [
              {
                "name": "tg1",
                "primary": true,
                "private_ip_address": "192.168.10.254",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_b"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B0-E4-20",
            "name": "tg_if1",
            "network_security_group_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkSecurityGroups/CSIT",
            "private_ip_address": "192.168.10.254",
            "private_ip_addresses": [
              "192.168.10.254"
            ],
            "resource_group_name": "CSIT_pm",
            "virtual_machine_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Compute/virtualMachines/tg"
          },
          "dependencies": [
            "azurerm_network_security_group.CSIT",
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.b",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tg_if2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/tg_if2",
            "ip_configuration": [
              {
                "name": "tg2",
                "primary": true,
                "private_ip_address": "192.168.20.254",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_d"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B0-ED-B3",
            "name": "tg_if2",
            "network_security_group_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkSecurityGroups/CSIT",
            "private_ip_address": "192.168.20.254",
            "private_ip_addresses": [
              "192.168.20.254"
            ],
            "resource_group_name": "CSIT_pm",
            "virtual_machine_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Compute/virtualMachines/tg"
          },
          "dependencies": [
            "azurerm_network_security_group.CSIT",
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.d",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tg_mng",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/tg_mng",
            "ip_configuration": [
              {
                "name": "tg_mng_ip",
                "primary": true,
                "private_ip_address": "172.16.0.10",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/publicIPAddresses/tg_public_ip",
                "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_a"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B0-E1-68",
            "name": "tg_mng",
            "network_security_group_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkSecurityGroups/CSIT",
            "private_ip_address": "172.16.0.10",
            "private_ip_addresses": [
              "172.16.0.10"
            ],
            "resource_group_name": "CSIT_pm",
            "virtual_machine_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Compute/virtualMachines/tg"
          },
          "dependencies": [
            "azurerm_network_security_group.CSIT",
            "azurerm_public_ip.tg_public_ip",
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.a",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "CSIT",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkSecurityGroups/CSIT",
            "location": "northeurope",
            "name": "CSIT",
            "resource_group_name": "CSIT_pm",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "InboundAll",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound",
                "priority": 104,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4500",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "IpSec-NAT",
                "priority": 101,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "500",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "IpSec",
                "priority": 100,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.CSIT",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dut1_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/publicIPAddresses/dut1_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.74.149.204",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "dut1_public_ip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "CSIT_pm",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dut2_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/publicIPAddresses/dut2_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.74.150.100",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "dut2_public_ip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "CSIT_pm",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tg_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/publicIPAddresses/tg_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.164.220.82",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "tg_public_ip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "CSIT_pm",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "b",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/routeTables/b",
            "location": "northeurope",
            "name": "b",
            "resource_group_name": "CSIT_pm",
            "route": [
              {
                "address_prefix": "10.0.0.0/24",
                "name": "route-10",
                "next_hop_in_ip_address": "192.168.10.254",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "20.0.0.0/24",
                "name": "route-20",
                "next_hop_in_ip_address": "192.168.10.11",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "192.168.20.0/24",
                "name": "tg2",
                "next_hop_in_ip_address": "192.168.10.11",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.b",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "c",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/routeTables/c",
            "location": "northeurope",
            "name": "c",
            "resource_group_name": "CSIT_pm",
            "route": [
              {
                "address_prefix": "10.0.0.0/24",
                "name": "route-10",
                "next_hop_in_ip_address": "200.0.0.101",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "20.0.0.0/24",
                "name": "route-20",
                "next_hop_in_ip_address": "200.0.0.102",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "192.168.10.0/24",
                "name": "tg1",
                "next_hop_in_ip_address": "200.0.0.101",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "192.168.20.0/24",
                "name": "tg2",
                "next_hop_in_ip_address": "200.0.0.102",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.c",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "d",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/routeTables/d",
            "location": "northeurope",
            "name": "d",
            "resource_group_name": "CSIT_pm",
            "route": [
              {
                "address_prefix": "10.0.0.0/24",
                "name": "route-10",
                "next_hop_in_ip_address": "192.168.20.11",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "20.0.0.0/24",
                "name": "route-20",
                "next_hop_in_ip_address": "192.168.20.254",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "192.168.10.0/24",
                "name": "tg1",
                "next_hop_in_ip_address": "192.168.20.11",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.CSIT",
            "azurerm_subnet.d",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "a",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_a",
            "ip_configurations": [
              "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut1_mng/ipConfigurations/dut1_mng_ip",
              "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut2_mng/ipConfigurations/dut2_mng_ip",
              "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/tg_mng/ipConfigurations/tg_mng_ip"
            ],
            "name": "subnet_a",
            "resource_group_name": "CSIT_pm",
            "virtual_network_name": "CSIT-network"
          },
          "dependencies": [
            "azurerm_resource_group.CSIT",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "b",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.10.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_b",
            "ip_configurations": [
              "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut1_if1/ipConfigurations/dut1_if1",
              "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/tg_if1/ipConfigurations/tg1"
            ],
            "name": "subnet_b",
            "resource_group_name": "CSIT_pm",
            "virtual_network_name": "CSIT-network"
          },
          "dependencies": [
            "azurerm_resource_group.CSIT",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "c",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "200.0.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_c",
            "ip_configurations": [
              "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut1_if2/ipConfigurations/dut1_if2",
              "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut2_if1/ipConfigurations/dut2_if1"
            ],
            "name": "subnet_c",
            "resource_group_name": "CSIT_pm",
            "virtual_network_name": "CSIT-network"
          },
          "dependencies": [
            "azurerm_resource_group.CSIT",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "d",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.20.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_d",
            "ip_configurations": [
              "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/dut2_if2/ipConfigurations/dut2_if2",
              "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/networkInterfaces/tg_if2/ipConfigurations/tg2"
            ],
            "name": "subnet_d",
            "resource_group_name": "CSIT_pm",
            "virtual_network_name": "CSIT-network"
          },
          "dependencies": [
            "azurerm_resource_group.CSIT",
            "azurerm_virtual_network.CSIT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "b",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_b",
            "route_table_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/routeTables/b",
            "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_b"
          },
          "dependencies": [
            "azurerm_route_table.b",
            "azurerm_subnet.b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "c",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_c",
            "route_table_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/routeTables/c",
            "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_c"
          },
          "dependencies": [
            "azurerm_route_table.c",
            "azurerm_subnet.c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "d",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_d",
            "route_table_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/routeTables/d",
            "subnet_id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_d"
          },
          "dependencies": [
            "azurerm_route_table.d",
            "azurerm_subnet.d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "CSIT",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/24",
              "192.168.10.0/24",
              "200.0.0.0/24",
              "192.168.20.0/24"
            ],
            "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network",
            "location": "northeurope",
            "name": "CSIT-network",
            "resource_group_name": "CSIT_pm",
            "subnet": [
              {
                "address_prefix": "172.16.0.0/24",
                "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_a",
                "name": "subnet_a"
              },
              {
                "address_prefix": "192.168.10.0/24",
                "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_b",
                "name": "subnet_b"
              },
              {
                "address_prefix": "192.168.20.0/24",
                "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_d",
                "name": "subnet_d"
              },
              {
                "address_prefix": "200.0.0.0/24",
                "id": "/subscriptions/0c27af66-f0dd-4f0e-bc8e-25513d4faacc/resourceGroups/CSIT_pm/providers/Microsoft.Network/virtualNetworks/CSIT-network/subnets/subnet_c",
                "name": "subnet_c"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.CSIT"
          ]
        }
      ]
    }
  ]
}